--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "description": "A trial project for pantheon",
-  "repository": "https://github.com/angular/angular-seed",
-  "license": "MIT",
+  "repository": "https://github.com/bico1583/Weather_panth.git",
+  "license": "MB",
   "dependencies": {
     "angular": "^1.8.2",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
-    "html5-boilerplate": "0.0.1"
+    "bootstrap": "^5.0.2",
+    "html5-boilerplate": "0.0.1",
+    "ngx-bootstrap": "^6.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
